--- a/index.html
+++ b/index.html
@@ -4,11 +4,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trebka.net</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            background-color: #595cff;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+
+        nav {
+            margin: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav a {
+            color: #595cff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+
+        main {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>HUHUHUH</h1>
+
+    <header>
+        <h1>Trebka.net</h1>
+    </header>
+
+    <nav>
+        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
+        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
+        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
+        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
+    </nav>
+
+    <main>
+        <h2>Trebka.net</h2>
+        <p>Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+        </p>
+
+        <h3>Trebka.net</h3>
+        <p>Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
+        </p>
+
+        <h3>Trebka.net </h3>
+        <ul>
+            <li>Trebka.net </li>
+            <li>Trebka.net </li>
+            <li>Trebka.net </li>
+            <li>Trebka.net </li>
+            <li>Trebka.net </li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Trebka.net. Trebka.net.</p>
+    </footer>
+
 </body>
 
 </html>
