--- a/index.html
+++ b/index.html
@@ -1,127 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trebka.net</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        header {
-            background-color: #595cff;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-
-        nav {
-            margin: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        nav a {
-            color: #595cff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="homestyle.css"> <!-- Odkaz na externí CSS soubor -->
 </head>
-
 <body>
-
+    <!-- Hlavní hlavička stránky -->
     <header>
         <h1>Trebka.net</h1>
+        <button id="theme-toggle">Přepnout režim</button>
     </header>
 
+    <!-- Navigační menu -->
     <nav>
-        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
-        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
-        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
-        <a href="https://bit.ly/4hmCSre" target="_blank">Trebka.net</a>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="Buy Subdomain.html">Buy Subdomain</a></li>
+            <li><a href="Buy MC IP Address.html">Buy Minecraft IP address</a></li>
+        </ul>
     </nav>
 
-    <main>
-        <h2>Trebka.net</h2>
-        <p>Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-        </p>
+    <!-- Sekce pro domovskou stránku -->
+    <section id="home">
+        <h2>Main page</h2>
+        <p>ERROR 406.</p>
+    </section>
 
-        <h3>Trebka.net</h3>
-        <p>Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-            Trebka.net Trebka.net Trebka.net Trebka.net Trebka.net
-        </p>
+    <!-- Sekce pro "O mně" -->
+    <section id="about">
+        <h2>about page</h2>
+        <p>Why was this page created? Because why not, it's very useful!</p>
+    </section>
 
-        <h3>Trebka.net </h3>
-        <ul>
-            <li>Trebka.net </li>
-            <li>Trebka.net </li>
-            <li>Trebka.net </li>
-            <li>Trebka.net </li>
-            <li>Trebka.net </li>
-        </ul>
-    </main>
+    <!-- Sekce pro kontaktní informace -->
+    <section id="contact">
+        <h2>contact</h2>
+        <p>stepak2321@trebka.net</p>
+    </section>
 
+    <!-- Patička stránky -->
     <footer>
-        <p>&copy; 2024 Trebka.net. Trebka.net.</p>
+        <p>© 2024 Trebka.net</p>
     </footer>
 
+    <!-- Odkaz na JavaScript soubor pro interaktivitu -->
+    <script src="script.js"></script>
 </body>
-
 </html>
