--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Move mouse to repel circles</p>
             <p>Left mouse button: grab circles</p>
             <br>
-            <p>Source code on <a href="https://google.com" target="_blank">github</a></p>
+            <p>Source code on <a href="https://github.com/Lukyn9999/circle-playground.trebka.net" target="_blank">github</a></p>
         </div>
     </div>
 
