--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="menu-toggle">X</button>
 
         <div id="info">
-            <h3>Welcome to asdfasdf</h3>
+            <h3>Welcome to Circle Playground</h3>
             <p>You can do what you want here!</p>
             <p>If you scroll down there are settings you can configure</p>
             <p>Changing setting values to high number is not recomended cus it can freeze your browser</p>
