--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Circle Playground</title>
     <link rel="stylesheet" href="circle-playground.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
-    <style>
 
-    </style>
+    <meta name="description" content="Playing with circles, Satisfying, Fun Satisfying game">
+    <meta name="keywords"
+        content="Playground, Online game, Circles, Screensaver, Circle, Fun, Fun game, Playing circles, Fun playground, Satisfying website, Satisfying game">
+    <meta name="author" content="Trebka.net, Lukyn9999">
+    <link rel="canonical" href="https://circle-playground.trebka.net">
 </head>
 
 <body>
@@ -20,7 +23,7 @@
             <h3>Welcome to Circle Playground</h3>
             <p>You can do what you want here!</p>
             <p>If you scroll down there are settings you can configure</p>
-            <p>Changing setting values to high number is not recomended cus it can freeze your browser</p>
+            <p>Changing setting values to high number is not recomended because it can freeze your browser</p>
             <p>Just keep in mind you have to click Apply button everytime you change settings</p>
             <h4>Controls: </h4>
             <p>Right click to repel circles</p>
