--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="circle-playground.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
 
-    <meta name="description" content="Playing with circles, Satisfying, Fun Satisfying game">
+    <meta name="description" content="Just a fun satisfying website">
     <meta name="keywords"
         content="Playground, Online game, Circles, Screensaver, Circle, Fun, Fun game, Playing circles, Fun playground, Satisfying website, Satisfying game">
     <meta name="author" content="Trebka.net, Lukyn9999">
